lang/macro/tests/ui/fail/C-11-unsafe-constructor.stderr
error: `unsafe fn` is not supported for ink! functions
  --> $DIR/C-11-unsafe-constructor.rs:10:9
   |
10 |         unsafe fn unsafe_constructor() -> Self {
   |         ^^^^^^
